# icfpc2024

./: .dockerignore  .gitignore  package-lock.json  package.json
.devcontainer/all/: devcontainer.json  docker-compose.yml
.devcontainer/solver/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
courses/3d/: 3d1  3d10  3d11  3d12  3d2  3d4  3d5  3d6  3d7  3d8  3d9
dashboard/: .env.sample  README.md  jest.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel-install.sh
dashboard/app/: actions.ts  layout.tsx  not-found.tsx  page.tsx  (+1 more)
infra/: cdk.json  package-lock.json  package.json
lambda/: .gitignore  Dockerfile  cli.ts  lambda.ts  package-lock.json  package.json  sample.ts  solver.ts  submit.ts
optimize/: .gitignore  README.md  pyproject.toml
optimize/src/optimize/: __init__.py  __main__.py
problem/: 3d.txt  efficiency.txt  lambdaman.txt  spaceship.txt
scripts/: communicate.rb  compress.ts  dblpackint.rb  decode-integer.rb  decode-string.rb  efficiency10.rb  efficiency11.rb  efficiency6.rb  efficiency9.rb  encode-string.rb  get_problems.sh  handman.rb  lambdaman14.rb  lambdaman9.hs  mirrorpackint.rb  packint.rb  proof2answer.ts  rlpack.rb  rlunpack.hs  sat.ts  send_human_readable_command.sh  skip.rb  submit_all.rb  unpackint.hs  unpackint2.hs  unpackint3.hs
solver/: Cargo.toml
solver/base/: Cargo.toml
solver/base/src/: eval.rs  input.rs  lambdaman_solution.rs  lib.rs  spaceship_solution.rs
solver/base/src/dsl/: ast.rs  codegen.rs  lexer.rs  main.rs  mod.rs  parser.rs  symbol.rs  token.rs  value.rs
solver/base/src/three_d/: board.rs  mod.rs  simulator.rs  three_d_input.rs
solver/spaceship/: Cargo.toml
solver/spaceship/src/: main.rs
solver/spaceship/src/ai/: annealing.rs  astaronly.rs  common.rs  mod.rs  nearest.rs  simple.rs  staronly.rs  staronly_sparse.rs
solver/wasm/: Cargo.toml
solver/wasm/src/: lib.rs
(+118 files in other folders)
