[project]
name = "optimize"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Seikichi KONDO", email = "seikichi@kmc.gr.jp" }
]
dependencies = [
    "optuna>=3.6.1",
    "boto3>=1.34.132",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"optimize" = "optimize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/optimize"]
