[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
regex = "1.10.5"
once_cell = "1.19.0"
im-rc = "15.1.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
enum-assoc = "1.1.0"
