[package]
name = "spaceship"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }

anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
structopt = { version = "0.3.26", default-features = false }
glam = "0.28.0"
im-rc = "15.1.0"
